# emergent

./: .gitignore  contributing.md  pyproject.toml  requirements.txt
.claude/skills/brand-guidelines/: SKILL.md
.claude/skills/brand-guidelines/references/: components.md
.devcontainer/: devcontainer.json  setup.sh
docs/: README.md  docs.json  introduction.mdx  quickstart.mdx
docs/api-reference/: agent-model.mdx  helpers.mdx
docs/concepts/: agent-model.mdx  graph-structures.mdx
docs/examples/: basic-simulation.mdx
examples/: LandscapeConstruction_NK_Modular.py  README.md
examples/Fazelpour_etal_HomogenizationAI/: AgentDecisionProcedures.py  README.md
examples/Wu_BetterThanBest/: README.md  Wu_BetterThanBest.py
scripts/: README.md  deploy.sh
