[build-system]
requires = ["hatchling", "matplotlib", "networkx", "numpy"]
build-backend = "hatchling.build"

[project]
name = "emergent"
version = "0.0.5"
authors = [
  { name="Oluwatoni Akintola", email="oakintol@nd.edu" },
  { name="Kekoa Wong", email="contact@kekoawong.com" },
]
dependencies = [
  "networkx>=3.3,<4.0",
  "numpy>=2.0.0,<3.0",
  "matplotlib>=3.9.2,<4.0"
]
description = "Emergent's Python module."
readme = "README.md"
requires-python = ">=3.10.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "black>=24.4.2",
  "build>=1.2.0",
  "twine>=5.1.0",
  "ipykernel>=6.29.5",
  "ipython>=8.26.0",
  "jupyter-client>=8.6.0",
]

[project.urls]
Homepage = "https://github.com/delphictech/emergent"
Website = "https://emergent.community/"